--- a/home/static/css/reg.css
+++ b/home/static/css/reg.css
@@ -17,9 +17,7 @@ padding-left:2.5%;
 
 height: 15%;
 }
-.menu{
-  border-radius: 2%;
-}
+
 .menu-item{
   padding-left: 5%;
 }
@@ -79,30 +77,10 @@ height: 15%;
   transition: all .5s ease 0s;
   border-radius: 8px;
 }
-.col-xs-6
-{
-    position: absolute;
-    left: 15%;
-}
-.btn-group{
-    padding-right: 2%;
-}
-
 .container{
     width: 100%;
 }
-   #button {
-    border: 1px solid #ccc;
-    padding: 6px 12px;
-    color: #666;
-    text-shadow: 0 1px #fff;
-    cursor: pointer;
-    border-radius: 3px 3px;
-    box-shadow: 0 1px #fff inset, 0 1px #ddd;
-    background: #f5f5f5;
-   }
    .main-form{
-    
     position: absolute;
     margin-top: 30px;
     margin: 0 auto;
@@ -115,25 +93,26 @@ height: 15%;
     color: #7ca772;
     font-size: 17px;
    }
-   .login-button{
-    margin-top: 5px;
-   }
+   
    .registrate{
     color:#20b1aa;
     background:#f9ffff;
-   }
-   .container{
-    padding:3%;
-    border-radius: 10%;
-    background:#c0e4e4;
    }
    .btn-default{
        background-color:green;
    }
   
-   .btn-facebook {background-color: #4267b2;width:30%;color: #fff;}
-.btn-facebook:hover {background-color: #365899; color: #fff;}
+   .btn-facebook {
+     background-color: #4267b2;
+     width:30%;
+     color: #fff;
+    }
+.btn-facebook:hover 
+{background-color: #365899; 
+  color: #fff;
+}
  
-.btn-twitter {background-color: #1da1f2;width:30%;color: #fff;}
+.btn-twitter {background-color: #1da1f2;width:30%;color:
+   #fff;}
 .btn-twitter {background-color: #da671a; color: #fff;}
  
