--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-
 <head>
   {% load static %}
-
-  <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -15,7 +12,6 @@
   </head>
   <title>inShort</title>
 </head>
-
 <body>
   <div class="row head">
     <div class="col-6 col-md-4 title">
@@ -23,18 +19,24 @@
     </div>
     <div class="col-6 col-md-6">
       <div class="content-menu">
-        <div class="col-6 col-md-4 menu-item"><a href="#">Home</a></div>
-        <div class="col-6 col-md-4 menu-item"><a href="#">FAQ</a></div>
+        <div class="col-6 col-md-4 menu-item"><a href="/home/">Home</a></div>
+        <div class="col-6 col-md-4 menu-item"><a href="/home/FAQ/">FAQ</a></div>
       </div>
       <div class="animation"></div>
     </div>
     <div class="header-block btn-group col-6 col-md-2" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-success">Увійти</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-info">Реєтрація </button>
-      </div>
+      {% if request.user.is_authenticated %}
+        <div class="btn-group" role="group">
+          <a type="button" href="/accounts/login/" class="btn btn-success">Вийти</a>
+        </div>
+      {% else %}
+        <div class="btn-group" role="group">
+          <a type="button" href="/accounts/login/" class="btn btn-success">Увійти</a>
+        </div>
+        <div class="btn-group" role="group">
+          <a type="button" href="/accounts/register/" class="btn btn-info">Реєтрація </a>
+        </div>
+      {% endif %}
     </div>
   </div>
   <div class="headline">
@@ -78,8 +80,7 @@
       </form>
     </div>
   </div>
-
- <i>
+ <div>
   <ul class="accordion-menu">
     <li>
       <div class="col-6 col-md-3">
@@ -105,13 +106,13 @@
       <div class="col-6 col-md-3">
         goooogle.com12 
       </div>
-      <div  id="copyTarget2" class="col-6 col-md-3 value ">
-         saddasgoogl.
+      <div   class="col-6 col-md-3 value ">
+          saddasgoogl.
        </div>
-      <div class="col-6 col-md-2">
-       меньше місяця
-      </div>
-      <div onclick="copyToClipboard(document.getElementById('copyTarget2'))" class="col-6 col-md-2">
+      <div   class="col-6 col-md-3 value ">
+        saddasgoogl.
+     </div>
+      <div onclick="copyToClipboard1(this)" class="col-6 col-md-2">
         <button>Copy</button>
       </div>
       <div class="dropdownlink row" >
@@ -140,7 +141,6 @@
               </div><div class="col-6 col-md-3">
                 Не Україна
               </div>
-          
         </div>
       </ul>
       </li>
@@ -148,13 +148,13 @@
         <div class="col-6 col-md-3">
           goooogle.com12 
         </div>
-        <div id="copyTarget1" class="col-6 col-md-3">
+        <div  class="col-6 col-md-3">
           => google.
          </div>
         <div class="col-6 col-md-2">
          меньше місяця
         </div>
-        <div onclick="copyToClipboard(document.getElementById('copyTarget1'))" class="col-6 col-md-2">
+        <div onclick="copyToClipboard1(this)" class="col-6 col-md-2">
           <button >Copy</button>
         </div>
         <div class="dropdownlink row" >
@@ -187,7 +187,7 @@
         </ul>
         </li>     
   </ul>
-</i>
+</div>
 
   <div id="urls_container"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
