--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -71,7 +71,7 @@
                     <div class="text-center col-xs-12 container">
                         <a href="" class="btn btn-facebook" > Facebook</a>
                         <button type="submit" class="btn btn-success">Створити</button>
-                        <a  href="" class=" btn btn-twitter">Google</a>
+                        <a  href="" class=" btn btn-google">Google</a>
                     </div>
                 </form>
             </div>
