--- a/home/static/css/reg.css
+++ b/home/static/css/reg.css
@@ -17,7 +17,9 @@ padding-left:2.5%;
 
 height: 15%;
 }
-
+.menu{
+  border-radius: 2%;
+}
 .menu-item{
   padding-left: 5%;
 }
@@ -77,42 +79,32 @@ height: 15%;
   transition: all .5s ease 0s;
   border-radius: 8px;
 }
-.container{
-    width: 100%;
-}
-   .main-form{
-    position: absolute;
-    margin-top: 30px;
-    margin: 0 auto;
-    max-width: 400px;
-    padding: 10px 40px;
 
-   color: #FFF;
-   }
    span.input-group-addon i {
     color: #7ca772;
     font-size: 17px;
    }
    
    .registrate{
+     padding-top:5%;
     color:#20b1aa;
     background:#f9ffff;
+   }
+   .container{
+    padding-top:3%;
+    padding-bottom:3%;
+    padding-left:3%;
+    padding-right:3%;
+    border-radius: 10%;
+    background:#c0e4e4;
    }
    .btn-default{
        background-color:green;
    }
   
-   .btn-facebook {
-     background-color: #4267b2;
-     width:30%;
-     color: #fff;
-    }
-.btn-facebook:hover 
-{background-color: #365899; 
-  color: #fff;
-}
+   .btn-facebook {background-color: #4267b2;width:30%;color: #fff;}
+.btn-facebook:hover {background-color: #365899; color: #fff;}
  
-.btn-twitter {background-color: #1da1f2;width:30%;color:
-   #fff;}
-.btn-twitter {background-color: #da671a; color: #fff;}
+.btn-google {background-color: #1da1f2;width:30%;color: #fff;}
+.btn-google {background-color: #da671a; color: #fff;}
  
