--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -1,44 +1,24 @@
 <ul class="accordion-menu">
-    <li>
-        <div class="col-6 col-md-6">
-            Посилання
-        </div>
-        <div class="col-6 col-md-2">
-            Скорочення
-        </div>
-        <div class="col-6 col-md-2">
-            Час дії
-        </div>
-        <div class="col-6 col-md-1">
-            клік
-        </div>
-        <div class="dropdownlink row">
-            <div class="col-6 col-md-1">
-                Переходи
-            </div>
-        </div>
-
-    </li>
     {% for url in user_urls %}
-    <li>
+    
+    <li class="for_border">
         
-        <div class="col-6 col-md-6">
-            {{ url.long_url }}
+        <div class="col-6 col-md-3 word-break">
+            <a href="{{ url.long_url }}"> {{ url.long_url }} </a>
         </div>
-        <div id="copyTarget1" class="col-6 col-md-2">
-            => {{ url.short_url }}
+        <div id='copyTarget{{ forloop.counter }}'class="col-6 col-md-2  ">
+            {{ url.short_url }}
         </div>
-        <div class="col-6 col-md-2">
+        <div class="col-6 col-md-3  ">
             меньше місяця
         </div>
-        <div onclick="copyToClipboard('copyTarget1')" class="col-6 col-md-1">
+        <div onclick="copyToClipboard('copyTarget{{ forloop.counter }}')" class="col-6 col-md-2">
             <button>Copy</button>
         </div>
-        <div class="dropdownlink row">
-            <div class="col-6 col-md-1">
-                5
+        <div class="dropdownlink row" >
+            <div class="col-5 col-md-2  for_border_item4">
+                Клік: 5
             </div>
-        </div>
         </div>
 
         <ul class="submenuItems">
