Add validate and fix with IE search

--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -18,11 +18,14 @@
 	</div>
 	<div class="form">
 	  <form>
-        <div class="col">
+        <div class="col-md-10">
           <div class="input-group">
-            <p><input type="search" class="form-control" name="q" size="80%" placeholder="Що вас турбує?"></p>
+			<p><input type="search" class="form-control"  size="80%" placeholder="Що вас турбує?"></p>
 		  </div>
 		</div>
+		
+		<button class="btn btn-default">Клик</button>
+		  
       </form>		
 	</div>
 	<div class="headline">
