--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -29,6 +29,9 @@
               <div class="btn-group" role="group">
                   <a type="button" href="/accounts/logout/" class="btn btn-success">Вийти</a>
               </div>
+              <div class="btn-group" role="group">
+                <a type="button" href="/accounts/register/" class="btn btn-info">Реєтрація </a>
+            </div>
           {% else %}
               <div class="btn-group" role="group">
                   <a type="button" href="/accounts/login/" class="btn btn-success">Увійти</a>
