--- a/home/static/css/faq.css
+++ b/home/static/css/faq.css
@@ -1,101 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-background-color:#f9ffff;
+  background-color:#f9ffff;
   overflow-x: hidden;	
-}
-.title{
-  font-size: 20px; 
-  color:white;
-}
-.head{
-background-color: #20b1aa;
-position: relative;
-padding-top: 2.5%;
-padding-bottom: 2.5%;
-padding-left:2.5%;
-
-height: 15%;
-}
-
-.menu{
- 
-  border-radius: 2%;
- 
-}
-.menu-item{
-  padding-left: 5%;
-}
-.form-group{
-  width: 40%;
-  margin: 0 auto;
-  border-radius: 10%;
-  background:#c0e4e4;
-}
-.content-menu .menu-item a {
-  position: relative;
-  z-index: 1;
-  text-transform: uppercase;
-  text-align: center;
-  color: white;
-  cursor: pointer;
-  color:white;
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-  transition: 0.5s;
-}
-.content-menu .menu-item a:hover {
-  color: #fff;
-}
-.content-menu .menu-item a:hover::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  background: #258fd6;
-  transition: 0.5s;
-  animation: animate .5s linear forwards; 
-}
-@keyframes animate {
-  0% {
-    top: calc(50% - 2px);
-    left: -100%;
-    height: 4px;
-    z-index: 1;
-  }
-  50% {
-    top: calc(50% - 2px);
-    left: 0;
-    height: 4px;
-    z-index: 1;
-  }
-  100% {
-    top: 0;
-    left: 0;
-    height: 100%;
-    z-index: -1;
-  }
-}
-.menu .animation {
-  position: absolute;
-  height: 100%;
-  transition: all .5s ease 0s;
-  border-radius: 8px;
 }
 .header-block1
 {
   width: 100px;
   height: 18%;
   border: 0px;
-
-  margin-right:0;
-  margin-left:0;
   padding-left:10%;
-}
-
-
-.header-block1{
-	 padding-left:10%;
 }
 .header-block2{
 	width: 100px;
@@ -115,7 +29,7 @@ height: 15%;
 	padding-top:2%; 
 	margin-bottom:3%;
 	color: #20b1aa;
-	float: top;
+	
 }
 .text{
 	width:100%;
@@ -123,7 +37,7 @@ height: 15%;
 .col-xs-4
 {
     position: relative;
-	left: 15%;
+	  left: 15%;
     font-size: 28px;	
 }
 .text-block {
@@ -131,7 +45,7 @@ padding: 10px 0;
 color: #000;
 margin-top:50px;
 display: block;
-margin: 0px auto;
+
 }
 .text-block1{
 	margin-right:80px;
@@ -159,17 +73,15 @@ h1{
 	margin-bottom:80px;
 	color:#20b1aa;
 }
-.form
-{
-	float: top;
-	position: relative;
-    display: flex;
-    justify-content: center; 
-	
-}
+
 label{
 	text-align:center;
-	padding: 0 auto;
+  padding: 0 auto;
+  
+}
+.btn-default{
+  float: left;
+  background-color:green;
 }
 .fieldset
 {
@@ -195,6 +107,9 @@ text-align: center;
 font-size: 14px;
 color:#20b1aa;
 }   
+.btn-default{
+  background-color:green;
+}
 
 
 
