--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -8,19 +8,36 @@ body {
   font-size: 20px; 
   color:white;
 }
-.head{
-background-color: #20b1aa;
+
+
+.headline{
 position: relative;
-padding-top: 2.5%;
-padding-bottom: 2.5%;
-padding-left:2.5%;
-height: 15%;
+  margin-top: 5%;
+
+margin-bottom:5%;
 }
-.header 
+.form
 {
- width: 100%;
- height: 15%;
+  padding-top: 5%;
+  position: relative;
+  justify-content: center; 	
+  display: flex;
 }
+
+  .form-control
+{
+  padding-top: 5%;
+  position: relative;
+  display: flex;
+  justify-content: center; 	
+  width:700px;
+  margin: 0 auto;
+
+ 
+}
+.input-group{
+  margin-left: 0 auto;
+ }
 .menu{
  
   border-radius: 2%;
@@ -109,7 +126,7 @@ position: relative;
   z-index: 1000;
 }
 .modal .modal_content {
-  border-radius:22%;
+
   background:#c0e4e4;
   margin: 25% auto;
   border-radius: 1px solid #888;
@@ -123,20 +140,28 @@ position: relative;
   font-weight: bold;
   cursor: pointer;
 }
-.form-control
+
+  .form-control
 {
 
-  width: 50%;
   padding-top: 5%;
-position: relative;
+  position: relative;
   display: flex;
-  justify-content: center; 	
+  justify-content: center;  
+
+ 
 }
+ 
+
+.input-group{
+  margin: 0 auto;
+ }
 ul {
   
 list-style: none;
 }
 .accordion-menu {
+  
 padding-top: 2%;
 padding-bottom: 2%;
 width: 60%;
@@ -145,77 +170,33 @@ background: #fff;
 border-radius: 4px;
 }
 
-.copy{
-  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
-}
-ul {
-  
-  list-style: none;
-  }
-  .accordion-menu {
-  padding-top: 2%;
-  padding-bottom: 2%;
-  width: 60%;
-  margin: 60px auto 20px;
-  background: #fff;
-  border-radius: 4px;
-  padding-left: 0%;
-  
-  }
-  
-  
-  .fa-chevron-down {
-  
-  right: 12px;
-  left: auto;
-  }
-  .dropdownlink {
-  cursor: pointer;
-  border-bottom: 1px solid #ccc;
-  color: #212121;
-  }
-  .for_border{
-      border: 3px solid #20aca6;
-    margin-bottom: 3.5%;
-    padding-left:2%;
-    padding-right:3%;
-    width: 100%;	
-  }
   .word-break{
       word-break: break-all;
 
     text-align:center;
   }
-  .for_border_item1{
-    text-align:center;
-    border: 2px solid #82e8e4;
-  }
-  .for_border_item2{
-    text-align:center;
-    border: 2px solid #a4eeeb;
-  }
-  .for_border_item3{
-    text-align:center;
-    border: 2px solid #a4eeeb;
-  }
-  .for_border_item4{
-    text-align:center;
-    background-color:  #a4eeeb;
-  }
+  
   .submenuItems {
-  display: none;
-  background: #C8E6C9;
-  
+    display: none;
+    background: #2aa7a0;
+    border-radius: 1px;
+    }
+    li {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    width: 100%;
+    font-size: 18px;
+    border-bottom: 1px solid #B6B6B6;
+    }
+    .for_border{
+      border: 3px solid #20aca6;
+    margin-bottom: 3.5%;
+    padding-left:2%;
+    padding-right:3%;
+    width: 100%;	
+    border-radius:0;
+    background-color:#fdfaf7;
   }
-  li {
-  padding-top: 2%;
-  padding-bottom: 2%;
-  width: 100%;
-  font-size: 18px;
-  border-bottom: 1px solid #B6B6B6;
-  }
-  
-  
 .container{
   padding-top:3%;
   padding-bottom:3%;
@@ -227,10 +208,20 @@ ul {
  .btn-default{
      background-color:green;
  }
-
- .btn-facebook {background-color: #4267b2;width:30%;color: #fff;}
-.btn-facebook:hover {background-color: #365899; color: #fff;}
-
-.btn-twitter {background-color: #1da1f2;width:30%;color: #fff;}
-.btn-twitter {background-color: #da671a; color: #fff;}
+ 
+ .long_url{
+  background:rgb(126, 9, 9);
+  text-decoration: blink;
+ }
+ .tooltip {
+  position: fixed;
+  padding: 10px 20px;
+  border: 1px solid #b3c9ce;
+  border-radius: 4px;
+  text-align: center;
+  font: italic 14px/1.3 sans-serif;
+  color: #333;
+  background: #fff;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
+}
 
