--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html>
+
 {% extends "header.html" %}
-<head>
+
   {% load static %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <title>inShort</title>
-</head>
+    
 {% block content %}
   <div class="headline">
     <h1 class="text-center">INSHORT</h1>
     <div class="form">
       <form method="POST" action="{% url 'add_url' %}"  class="form">
                {% csrf_token %}
-        <div class="input-group">
-          <input size="80%" type="text" name="long_url" class="form-control" placeholder="Paste long URL and shorten it">
+        <div class="input-group col-md-10">
+          <div class="input_url">
+          <input   name="long_url" required class="form-control"  size="300px"   required  placeholder="Paste long URL and shorten it">
+          </div>
           <span class="input-group-btn">
-            <button class="btn btn-info btn_modal_window" type="button">
+            <button type="button" data-toggle="tooltip" pattern="^h"class="btn btn-info btn_modal_window " required type="button">
               shorten
             </button>
           </span>
@@ -27,9 +24,8 @@
   </div>
   <div id="my_modal" class="modal">
     <div class="modal_content">
-      <div class="col-xs-10">
+      <div class="col-xs-11">
         <h3 class="text-center">Заповніть</h3>
-    
           <div class="form-group">
             <label for="username" class="cols-sm-2 control-label">Скорочення</label>
             <input type="text" name="short_url" class="form-control" />
@@ -46,7 +42,7 @@
             <button type="submit" class="btn btn-success">Створити</button>
           </div>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-1">
         <span class="close_modal_window">×</span>
       </div>
       </form>
@@ -57,4 +53,4 @@
 <script src="{% static 'script/jquery.js' %}" defer></script>
 <script src="{% static 'script/history.js' %}" defer></script>
 <script src="{% static 'script/menu.js' %}" defer></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
