--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -8,7 +8,15 @@ body {
   font-size: 20px; 
   color:white;
 }
-
+.head{
+  background-color: #20b1aa;
+  position: relative;
+  padding-bottom: 2.5%;
+  padding-left:2.5%;
+  padding-top: 2.5%;
+  
+  height: 15%;
+  }
 
 .headline{
 position: relative;
