--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
         <link rel="stylesheet" href="{% static 'css/faq.css' %}" />
         <link rel="stylesheet" href="{% static "css/reg.css" %}" />
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Maven+Pro" />
         <script src="{% static 'script/jquery.js' %}" defer></script>
         <script src="{% static 'script/history.js' %}" defer></script>
         <script src="{% static 'script/menu.js' %}" defer></script>
@@ -14,8 +15,8 @@
 <body>
   <body>
     <div class="row head">
-      <div class="col-6 col-md-4 title">
-          inSHORT
+      <div id="main-name" class="col-6 col-md-4 title">
+          inShort
       </div>
       <div class="col-6 col-md-6">
         <div class="content-menu">
