--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -129,23 +129,24 @@ position: relative;
   z-index: 1;
   width: 100%;
   height: 100%;
-  overflow: auto;
+
   background-color: rgba(0,0,0,0.6);
   z-index: 1000;
 }
 .modal .modal_content {
 
+  border-radius: 5%;
+  border: 3px solid #20aca6;
   background:#c0e4e4;
   margin: 25% auto;
-  border-radius: 1px solid #888;
-  width: 40%;
-  height: 40%;
+  width: 30%;
+  height: 44%;
   z-index: 99999;
 }
 .modal .modal_content .close_modal_window {
-  color: #aaa;
+color: #aaa;
   font-size: 28px;
-  font-weight: bold;
+ 
   cursor: pointer;
 }
 
@@ -180,8 +181,7 @@ border-radius: 4px;
 
   .word-break{
       word-break: break-all;
-
-    text-align:center;
+  
   }
   
   .submenuItems {
@@ -197,10 +197,8 @@ border-radius: 4px;
     border-bottom: 1px solid #B6B6B6;
     }
     .for_border{
-      border: 3px solid #20aca6;
+    border: 3px solid #20aca6;
     margin-bottom: 3.5%;
-    padding-left:2%;
-    padding-right:3%;
     width: 100%;	
     border-radius:0;
     background-color:#fdfaf7;
