add impotr tz to url viev

--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -1,4 +1,5 @@
 <ul class="accordion-menu">
+    {% load tz %} <!--for localtime-->
     {% for url in user_urls %}
     
     <li class="for_border">
