--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     {% load static %}    
     <head>
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Maven+Pro" />
+        <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Maven+Pro" /> -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
         <link rel="stylesheet" href="{% static 'css/faq.css' %}" />
         <link rel="stylesheet" href="{% static "css/reg.css" %}" />
@@ -20,25 +20,25 @@
       </div>
       <div class="col-6 col-md-6">
         <div class="content-menu">
-          <div class="col-6 col-md-4 menu-item"><a href="/home/">Home</a></div>
-      <div class="col-6 col-md-4 menu-item"><a href="/home/FAQ/">FAQ</a></div>
+          <div class="col-6 col-md-4 menu-item"><a href="{% url 'home' %}">Home</a></div>
+      <div class="col-6 col-md-4 menu-item"><a href="{% url 'FAQ' %}">FAQ</a></div>
         </div>
         <div class="animation"></div>
       </div>	
       <div class="header-block btn-group col-6 col-md-2"  role="group" aria-label="...">
           {% if request.user.is_authenticated %}
               <div class="btn-group" role="group">
-                  <a type="button" href="/accounts/logout/" class="btn btn-success">Вийти</a>
+                  <a type="button" href="{% url 'logout' %}" class="btn btn-success">Вийти</a>
               </div>
               <div class="btn-group" role="group">
-                <a type="button" href="/accounts/register/" class="btn btn-info">Реєтрація </a>
+                <a type="button" href="{% url 'register' %}" class="btn btn-info">Реєтрація </a>
             </div>
           {% else %}
               <div class="btn-group" role="group">
-                  <a type="button" href="/accounts/login/" class="btn btn-success">Увійти</a>
+                  <a type="button" href="{% url 'login' %}" class="btn btn-success">Увійти</a>
               </div>
               <div class="btn-group" role="group">
-                  <a type="button" href="/accounts/register/" class="btn btn-info">Реєтрація </a>
+                  <a type="button" href="{% url 'register' %}" class="btn btn-info">Реєтрація </a>
               </div>
           {% endif %}
       </div>
