--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -60,7 +60,7 @@
                     <a  href="{% url 'social:begin' 'facebook' %}" class="btn btn-facebook">Facebook</a>
                    
                     <button type="submit" class="btn btn-success">Зайти</button>
-                    <a  href="{% url 'social:begin' 'github' %}" class=" btn btn-twitter">GitHub</a>
+                    <a  href="{% url 'social:begin' 'google-oauth2' %}" class=" btn btn-twitter">Google</a>
                 </div>
             </form>
         </div>
