Ajax to check short url availibility

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -27,7 +27,7 @@
         <h3 class="text-center">Заповніть</h3>
           <div class="form-group">
             <label for="username" class="cols-sm-2 control-label">Скорочення</label>
-            <input type="text" name="short_url" class="form-control" />
+            <input id="short_url" type="text" name="short_url" class="form-control short_url" />
             <legend>Виберіть час</legend>
             <label>Буде дійсна </label>
             <select id="myList">
