--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1,65 +1,85 @@
 body {
   margin: 0;
   padding: 0;
-  background-color:#f9ffff;
-  overflow-x: hidden;	
+  background-color: #f9ffff;
+  overflow-x: hidden;
 }
-.title{
-  font-size: 20px; 
-  color:white;
+
+.title {
+  font-size: 20px;
+  color: white;
 }
-.head{
+
+.head {
   background-color: #20b1aa;
   position: relative;
   padding-bottom: 2.5%;
-  padding-left:2.5%;
+  padding-left: 2.5%;
   padding-top: 2.5%;
-  
   height: 15%;
-  }
+}
 
-.headline{
-position: relative;
+#short_url:invalid {
+  border-color: red;
+}
+
+#short_url:valid {
+  border-color: #5cb85c;
+}
+
+#short_url:focus:invalid {
+  outline: none !important;
+  border:1px solid red;
+  box-shadow: 0 0 10px #719ECE;
+}
+
+#short_url:focus:valid {
+  outline: none !important;
+  border:1px solid #5cb85c;
+  box-shadow: 0 0 10px #719ECE;
+}
+
+.headline {
+  position: relative;
   margin-top: 5%;
-
-margin-bottom:5%;
+  margin-bottom: 5%;
 }
-.form
-{
+
+.form {
   padding-top: 5%;
   position: relative;
-  justify-content: center; 	
+  justify-content: center;
   display: flex;
 }
 
-  .form-control
-{
+.form-control {
   padding-top: 5%;
   position: relative;
   display: flex;
-  justify-content: center; 	
-  width:700px;
+  justify-content: center;
+  width: 700px;
   margin: 0 auto;
+}
 
- 
-}
-.input-group{
+.input-group {
   margin-left: 0 auto;
- }
-.menu{
- 
-  border-radius: 2%;
- 
 }
-.menu-item{
+
+.menu {
+  border-radius: 2%;
+}
+
+.menu-item {
   padding-left: 5%;
 }
-.form-group{
+
+.form-group {
   width: 40%;
   margin: 0 auto;
   border-radius: 10%;
-  background:#c0e4e4;
+  background: #c0e4e4;
 }
+
 .content-menu .menu-item a {
   position: relative;
   z-index: 1;
@@ -67,23 +87,26 @@ margin-bottom:5%;
   text-align: center;
   color: white;
   cursor: pointer;
-  color:white;
+  color: white;
   font-size: 20px;
   text-decoration: none;
   text-transform: uppercase;
   transition: 0.5s;
 }
+
 .content-menu .menu-item a:hover {
   color: #fff;
 }
+
 .content-menu .menu-item a:hover::before {
   content: '';
   position: absolute;
   width: 100%;
   background: #258fd6;
   transition: 0.5s;
-  animation: animate .5s linear forwards; 
+  animation: animate .5s linear forwards;
 }
+
 @keyframes animate {
   0% {
     top: calc(50% - 2px);
@@ -104,25 +127,28 @@ margin-bottom:5%;
     z-index: -1;
   }
 }
+
 .menu .animation {
   position: absolute;
   height: 100%;
   transition: all .5s ease 0s;
   border-radius: 8px;
 }
-.headline{
-position: relative;
+
+.headline {
+  position: relative;
   margin-top: 5%;
   margin-right: 5%;
-margin-bottom:5%;
+  margin-bottom: 5%;
 }
-.form
-{
+
+.form {
   padding-top: 5%;
-position: relative;
+  position: relative;
   display: flex;
-  justify-content: center; 	
+  justify-content: center;
 }
+
 .modal {
   display: none;
   position: fixed;
@@ -130,18 +156,19 @@ position: relative;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 1000;
 }
-.modal .modal_content {
 
-  background:#c0e4e4;
+.modal .modal_content {
+  background: #c0e4e4;
   margin: 25% auto;
   border-radius: 1px solid #888;
   width: 40%;
   height: 40%;
   z-index: 99999;
 }
+
 .modal .modal_content .close_modal_window {
   color: #aaa;
   font-size: 28px;
@@ -149,79 +176,78 @@ position: relative;
   cursor: pointer;
 }
 
-  .form-control
-{
-
+.form-control {
   padding-top: 5%;
   position: relative;
   display: flex;
-  justify-content: center;  
-
- 
+  justify-content: center;
 }
- 
 
-.input-group{
+.input-group {
   margin: 0 auto;
- }
+}
+
 ul {
-  
-list-style: none;
+  list-style: none;
 }
+
 .accordion-menu {
-  
-padding-top: 2%;
-padding-bottom: 2%;
-width: 60%;
-margin: 60px auto 20px;
-background: #fff;
-border-radius: 4px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 60%;
+  margin: 60px auto 20px;
+  background: #fff;
+  border-radius: 4px;
 }
 
-  .word-break{
-      word-break: break-all;
+.word-break {
+  word-break: break-all;
+  text-align: center;
+}
 
-    text-align:center;
-  }
-  
-  .submenuItems {
-    display: none;
-    background: #2aa7a0;
-    border-radius: 1px;
-    }
-    li {
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 100%;
-    font-size: 18px;
-    border-bottom: 1px solid #B6B6B6;
-    }
-    .for_border{
-      border: 3px solid #20aca6;
-    margin-bottom: 3.5%;
-    padding-left:2%;
-    padding-right:3%;
-    width: 100%;	
-    border-radius:0;
-    background-color:#fdfaf7;
-  }
-.container{
-  padding-top:3%;
-  padding-bottom:3%;
-  padding-left:3%;
-  padding-right:3%;
+.submenuItems {
+  display: none;
+  background: #2aa7a0;
+  border-radius: 1px;
+}
+
+li {
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 100%;
+  font-size: 18px;
+  border-bottom: 1px solid #B6B6B6;
+}
+
+.for_border {
+  border: 3px solid #20aca6;
+  margin-bottom: 3.5%;
+  padding-left: 2%;
+  padding-right: 3%;
+  width: 100%;
+  border-radius: 0;
+  background-color: #fdfaf7;
+}
+
+.container {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 3%;
+  padding-right: 3%;
   border-radius: 10%;
-  background:#c0e4e4;
- }
- .btn-default{
-     background-color:green;
- }
- 
- .long_url{
-  background:rgb(126, 9, 9);
+  background: #c0e4e4;
+}
+
+.btn-default {
+  background-color: green;
+}
+
+.long_url {
+  background: rgb(126, 9, 9);
   text-decoration: blink;
- }
- .tooltip {
+}
+
+.tooltip {
   position: fixed;
   padding: 10px 20px;
   border: 1px solid #b3c9ce;
@@ -232,4 +258,3 @@ border-radius: 4px;
   background: #fff;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
 }
-
