--- a/custom_urls/templates/urls/user_urls.html
+++ b/custom_urls/templates/urls/user_urls.html
@@ -6,14 +6,17 @@
         <div class="col-6 col-md-5 word-break">
             <a href="{{ url.long_url }}"> {{ url.long_url }} </a>
         </div>
-        <div id='copyTarget{{ forloop.counter }}'class="col-6 col-md-2  ">
+        <div id='copyTarget{{ forloop.counter }}'class="col-6 col-md-2 word-break ">
             {{ url.short_url }}
         </div>
         <div class="col-6 col-md-2  ">
             меньше місяця
         </div>
-        <div onclick="copyToClipboard('copyTarget{{ forloop.counter }}')" class="col-6 col-md-2">
+        <div onclick="copyToClipboard('copyTarget{{ forloop.counter }}')" class="col-6 col-md-1">
             <button>Copy</button>
+        </div>
+        <div onclick="copyToClipboard('copyTarget{{ forloop.counter }}')" class="col-6 col-md-1">
+            <button>QR</button>
         </div>
         <div class="dropdownlink row" >
             <div class="col-5 col-md-1  for_border_item4">
