--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -20,19 +20,19 @@ body {
 
 .headline{
 position: relative;
-  margin-top: 5%;
-
-margin-bottom:5%;
+  margin-top: 2%;
+  margin-bottom:2%;
 }
 .form
 {
-  padding-top: 5%;
+  padding-top: 2%;
+  padding-bottom: 3%;
   position: relative;
   justify-content: center; 	
   display: flex;
 }
 
-  .form-control
+.form-control
 {
   padding-top: 5%;
   position: relative;
@@ -40,21 +40,17 @@ margin-bottom:5%;
   justify-content: center; 	
   width:700px;
   margin: 0 auto;
-
- 
 }
 .input-group{
   margin-left: 0 auto;
  }
 .menu{
- 
   border-radius: 2%;
- 
 }
 .menu-item{
   padding-left: 5%;
 }
-.form-group{
+.data-ur-group{
   width: 40%;
   margin: 0 auto;
   border-radius: 10%;
@@ -111,19 +107,11 @@ margin-bottom:5%;
   border-radius: 8px;
 }
 .headline{
-position: relative;
-  margin-top: 5%;
-  margin-right: 5%;
-margin-bottom:5%;
+  position: relative;
 }
-.form
-{
-  padding-top: 5%;
-position: relative;
-  display: flex;
-  justify-content: center; 	
-}
+
 .modal {
+  padding: 5%;
   display: none;
   position: fixed;
   z-index: 1;
@@ -133,65 +121,56 @@ position: relative;
   background-color: rgba(0,0,0,0.6);
   z-index: 1000;
 }
-
+.text-center{
+  padding-bottom: 3%;
+}
 .modal .modal_content {
-
   border-radius: 5%;
   border: 3px solid #20aca6;
   background:#c0e4e4;
   margin: 25% auto;
   margin-top: 20%;
+  padding-top:3%;
+  padding-bottom:3%;
   width: 20%;
-  height: 44%;
   z-index: 99999;
 }
 .modal .modal_content .close_modal_window {
-color: #aaa;
-
- 
+  color: #aaa;
   cursor: pointer;
 }
-
-  .form-control
+.form-control
 {
-
-  padding-top: 5%;
+  padding-bottom: 5%;
   position: relative;
   display: flex;
   justify-content: center;  
-
- 
 }
- 
-
 .input-group{
   margin: 0 auto;
  }
-ul {
-  
+ul { 
 list-style: none;
 }
 .accordion-menu {
-  
-padding-top: 2%;
+ padding-top: 2%;
 padding-bottom: 2%;
-width: 60%;
+width: 70%;
 margin: 60px auto 20px;
 background: #fff;
 border-radius: 4px;
 }
-
-  .word-break{
-      word-break: break-all;
+.word-break{
+  word-break: break-all;
+}
   
-  }
-  
-  .submenuItems {
+.submenuItems 
+{
     display: none;
     background: #2aa7a0;
     border-radius: 1px;
-    }
-    li {
+}
+li {
     padding-top: 2%;
     padding-bottom: 2%;
     width: 100%;
