--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,52 +1,47 @@
 {% extends "header.html" %}    
-
-{% load static %}   
-
 {% block content %}
-  <div class="headline">
+<main>
+    <div class="headline">
     <h1 class="text-center">INSHORT</h1>
+    </div>
     <div class="form">
       <form method="POST" action="{% url 'add_url' %}"  class="form">
                {% csrf_token %}
         <div class="input-group col-md-10">
           <div class="input_url">
-          <input  id="long_url" type="url" name="long_url" required class="form-control"  size="300px"   required  placeholder="Введіть URL для скорочення.">
+            <input  id="long_url" type="url" name="long_url" class="form-control"  size="300px"   required  placeholder="Введіть URL для скорочення.">
           </div>
           <span class="input-group-btn">
-            <button type="button" data-toggle="tooltip" pattern="^h"class="btn btn-info btn_modal_window " required type="button">
+            <button type="button" data-toggle="tooltip"   class="btn btn-info btn_modal_window " required>
               Скоротити
             </button>
           </span>
         </div>
-      
-    </div>
-  </div>
-  <div id="my_modal" class="modal">
-    <div class="modal_content">
-      <h3 class="text-center">Заповніть</h3>
-        <div class="close_modal_window"></div>
-          <div class="form-group">
-            <label for="username" class="cols-sm-2 control-label">Скорочення</label>
-            <input id="short_url" type="text" name="short_url" class="form-control short_url" />
-            <legend>Виберіть час</legend>
-            <label>Буде дійсна </label>
-            <select id="myList" name="time">
-              <option value="5">5хв</option>
-              <option value="1440">День</option>
-              <option value="10080">Тиждень</option>
-              <option value="43200">Місяць</option>
-              <option value="525600">Рік</option>
-              <option value="-1">Назавжди</option>
-            </select>
-            <button type="submit" class="btn btn-success">Створити</button>
-      </div>
-
+        <div id="my_modal" class="modal">
+          <div class="modal_content">
+            <label class="text-center cols-sm-12 ">Заповніть<label>
+            <div class="close_modal_window"></div>
+             <div class="form-group data-ur-group">
+                <label for="username" class="cols-sm-2 control-label">Скорочення</label>
+                <input type="text" name="short_url" class="form-control" />
+                <label>Буде дійсна </label>
+                <select id="myList">
+                  <option value="0">5хв</option>
+                  <option value="1">День</option>
+                  <option value="2">Тиждень</option>
+                  <option value="3">Місяць</option>
+                  <option value="4">Рік</option>
+                  <option value="4">Назавжди</option>
+                </select>
+                <button type="submit" class="btn btn-success">Створити</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </form>
-    </div>
-  </div>
   <div id="urls_container"></div>
+</main>
+
 {% endblock %}
-<script src="{% static 'script/jquery.js' %}" defer></script>
-<script src="{% static 'script/history.js' %}" defer></script>
-<script src="{% static 'script/menu.js' %}" defer></script>
+
 
