Add validate and oportunality

--- a/home/templates/FAQ.html
+++ b/home/templates/FAQ.html
@@ -28,27 +28,27 @@
 	<div class="text-block"><!--text-->
 	  <div class="text-block1 col-md-3" >
 	    <h4>У чому переваги коротких посилань?</h4>
-        Простіше запам'ятати короткі URL-адреси. Вони також використовують менше пам'яті. На багатьох веб-сайтах є книги для гостей та поля коментарів, в які можна писати лише записи, обмежені максимальною кількістю символів...</a>
+        <p>Простіше запам'ятати короткі URL-адреси. Вони також використовують менше пам'яті. На багатьох веб-сайтах є книги для гостей та поля коментарів, в які можна писати лише записи, обмежені максимальною кількістю символів...</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>А як щодо фішинг-сайтів?</h4>
-		Фішингові веб-сайти можуть бути настільки ж небезпечними, як і сайти зловмисних програм. Вони намагаються ввести своїх відвідувачів у розкриття особистих даних (таких як імена, паролі, адреси та дані облікового запису)<a href="#">...</a>
+		<p>Фішингові веб-сайти можуть бути настільки ж небезпечними, як і сайти зловмисних програм. Вони намагаються ввести своїх відвідувачів у розкриття особистих даних (таких як імена, паролі, адреси та дані облікового запису)<a href="#">...</a></p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Чи буде збережена моя IP-адреса чи інші особисті дані, коли я створю коротке посилання?</h4>
-		Ні Ми нічого не економимо. Лише коротка URL-адреса, яку ви встановили, та пов’язані з цим налаштування. Ми не зацікавлені в тому, щоб ми самі стали прозорими громадянами
+		<p>Ні Ми нічого не економимо. Лише коротка URL-адреса, яку ви встановили, та пов’язані з цим налаштування. Ми не зацікавлені в тому, щоб ми самі стали прозорими громадянами</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Оптимізація посилань</h4>
-		Оптимізуйте та налаштовуйте кожну коротеньку URL-адресу, щоб скористатися її можливостями. Встановіть власний псевдонім (ім’я), використовуйте його в партнерських програмах, отримуйте QR-код для друку листовок та багато іншого.
+		<p>Оптимізуйте та налаштовуйте кожну коротеньку URL-адресу, щоб скористатися її можливостями. Встановіть власний псевдонім (ім’я), використовуйте його в партнерських програмах, отримуйте QR-код для друку листовок та багато іншого.</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Детальна аналітика</h4>
-		Відстежуйте кожну скорочену посилання в реальному часі та оцінюйте її ефективність, щоб зрозуміти її. Детальна аналітика надає вам інформацію про кліки.
+		<p>Відстежуйте кожну скорочену посилання в реальному часі та оцінюйте її ефективність, щоб зрозуміти її. Детальна аналітика надає вам інформацію про кліки.</p>
 	  </div>
 	  <div class="text-block1 col-md-3">
 	    <h4>Скорочення посилань</h4>
-		Безкоштовна користувацька скорочена URL-адреса з багатьма функціями, що забезпечує кращу якість скорочення посилань. Скорочені URL-адреси ніколи не закінчиться. Ми не відображаємо об’яви під час прямої переадресації на вихідний URL.
+		<p>Безкоштовна користувацька скорочена URL-адреса з багатьма функціями, що забезпечує кращу якість скорочення посилань. Скорочені URL-адреси ніколи не закінчиться. Ми не відображаємо об’яви під час прямої переадресації на вихідний URL.</p>
 	  </div>
 	</div>
 </div>
